# MGARDx

./: README.md
include/: coeff_decompose_interleave.hpp  coeff_reposition_recompose.hpp  decompose.hpp  decompose_interleave.hpp  decompose_interleave_hybrid.hpp  decompose_interleave_new.hpp  decompose_interleave_new_hybrid.hpp  decompose_new.hpp  recompose.hpp  reorder.hpp  reposition_recompose.hpp  reposition_recompose_hybrid.hpp  reposition_recompose_new_hybrid.hpp  sample.hpp  utils.hpp
install/include/: coeff_decompose_interleave.hpp  coeff_reposition_recompose.hpp  decompose_interleave.hpp  decompose_interleave_new.hpp  recompose_new.hpp  reorder.hpp  reposition_recompose.hpp  reposition_recompose_new.hpp  utils.hpp
test/: CMakeLists.txt  test_coeff_decompose_interleave.cpp  test_coeff_decompose_result.cpp  test_decompose.cpp  test_decompose_interleave.cpp  test_decompose_interleave_hybrid.cpp  test_decompose_interleave_new.cpp  test_decompose_interleave_new_hybrid.cpp  test_sampling.cpp
